--- a/Design/package.json
+++ b/Design/package.json
@@ -2,17 +2,23 @@
   "name": "mealmaster",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "home.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
     "pg-promise": "^11.5.4"
+  },
+  "engines": {
+    "node": "18.16.1"
   }
 }
